# gopad

./: .gitignore  Makefile.am  README  build.sh  configure.ac  go.mod
m4/: golang.m4
